--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,7 +32,7 @@
       <div class="col-10">
         <div class="btn-group btn-group-toggle " data-toggle="buttons">
           <label class="btn active ">
-            <input type="radio" name="shuffle-filter" value="all" checked="checked" />All Projects
+            <input type="radio" name="shuffle-filter" value="all" checked="checked" />All
           </label>
           {{ $categories := slice }}
           {{ range (where .Site.RegularPages "Type" "portfolio") }}
