--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -16,7 +16,7 @@
       <div class="col-10 text-center">
         <div class="btn-group btn-group-toggle " data-toggle="buttons">
           <label class="btn active ">
-            <input type="radio" name="shuffle-filter" value="all" checked="checked" />All Projects
+            <input type="radio" name="shuffle-filter" value="all" checked="checked" />All
           </label>
           {{ $categories := slice }}
           {{ range .Data.Pages }}
