--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,10 @@
 	<div class="container">
 		<div class="row ">
 			<div class="col-lg-6">
-				<p class="mb-0">{{ .Site.Params.copyright | markdownify }}</p>
+				<p class="mb-0">{{ .Site.Params.copyright_ower | markdownify }}</p>
+			</div>
+			<div class="col-lg-6">
+				<p class="mb-0">{{ .Site.Params.copyright_development | markdownify }}</p>
 			</div>
 			<div class="col-lg-6">
 				<div class="widget footer-widget text-lg-right mt-5 mt-lg-0">
