update some svg

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,9 +15,9 @@
 						<li class="list-inline-item"><a href="{{ .link | safeURL }}" target="_blank"><i class="{{ .icon }} mr-3"></i></a>
 						</li>
 						{{ end }}
-						<svg class="dao-icon" aria-hidden="true">
-							<use xlink:href="https://pokemol.com/dao/0x1ba850cb53280d7f9987be283ff462038ec8abe2/"></use>
-						</svg>		
+						<svg class="icon" aria-hidden="true">
+							<use xlink:href="#icon-pokemol__avatar"></use>
+						  </svg>	
 					</ul>
 				</div>
 			</div>
