--- a/layouts/index.html
+++ b/layouts/index.html
@@ -70,7 +70,21 @@
 </section>
 {{ end }}
 <!-- Portfolio End -->
-
+<!-- Introduct start -->
+<section class="introduct">
+  <div class="container">
+    <div class="span12">
+      <div class="span4">
+      </div>
+      <div class="span4">
+        <h3>1</h3>
+      </div>
+      <div class="span4">
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Introduct end -->
 <!-- Service start -->
 {{ if .Site.Data.homepage.service.enable }}
 {{ with .Site.Data.homepage.service }}
