--- a/layouts/index.html
+++ b/layouts/index.html
@@ -71,18 +71,14 @@
 {{ end }}
 <!-- Portfolio End -->
 <!-- Introduct start -->
-<section class="introduct">
+<section class="section service-home border-top">
   <div class="container">
-    <div class="span12">
-      <div class="span4">
-      </div>
-      <div class="span4">
-        <h3>1</h3>
-      </div>
-      <div class="span4">
+    <div class="row">
+      <div class="col-lg-6">
+        <h2 class="mb-2 ">{{ .title | markdownify }}</h2>
+        <p class="mb-5">{{ .content | markdownify }}</p>
       </div>
     </div>
-  </div>
 </section>
 <!-- Introduct end -->
 <!-- Service start -->
