--- a/layouts/index.html
+++ b/layouts/index.html
@@ -75,8 +75,11 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-        <h2 class="mb-2 ">{{ .title | markdownify }}</h2>
-        <p class="mb-5">{{ .content | markdownify }}</p>
+        <h2 class="mb-2 ">DAOSquare Community DAO</h2>
+        <p class="mb-5">DAOSquare Community DAO (DCD) is a governance organization of DAOSquare.</p>
+        <p class="mb-5">
+          You can check the detailed introduction in our BLOG.
+        </p>
       </div>
     </div>
 </section>
