--- a/layouts/index.html
+++ b/layouts/index.html
@@ -71,15 +71,14 @@
 {{ end }}
 <!-- Portfolio End -->
 <!-- Introduct start -->
-<section class="section service-home border-top">
+<section class="section introduct  border-top">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-8">
         <h2 class="mb-2 ">DAOSquare Community DAO</h2>
-        <p class="mb-5">DAOSquare Community DAO (DCD) is a governance organization of DAOSquare.</p>
-        <p class="mb-5">
-          You can check the detailed introduction in our BLOG.
+        <p class="mb-5">DAOSquare Community DAO (DCD) is a governance organization of DAOSquare<br>You can check the detailed introduction in our BLOG.
         </p>
+        <button class="btn btn-default">MEET OUR DAO MEMBERS</button>
       </div>
     </div>
 </section>
