--- a/layouts/index.html
+++ b/layouts/index.html
@@ -78,9 +78,9 @@
         <h2 class="mb-2 ">DAOSquare Community DAO</h2>
         <p class="mb-5">DAOSquare Community DAO (DCD) is a governance organization of DAOSquare<br>You can check the detailed introduction in our BLOG.
         </p>
-        <button class="btn btn-default">MEET OUR DAO MEMBERS</button>
+        <a class="btn btn-danger">MEET OUR DAO MEMBERS</a>
       </div>
-    </div>
+    </div>  
 </section>
 <!-- Introduct end -->
 <!-- Service start -->
