--- a/layouts/index.html
+++ b/layouts/index.html
@@ -79,6 +79,7 @@
         <p class="mb-5">DAOSquare Community DAO (DCD) is a governance organization of DAOSquare<br>You can check the detailed introduction in our BLOG.
         </p>
         <a class="btn btn-danger">MEET OUR DAO MEMBERS</a>
+        <div><img src="/images/pokemol__brand-svg.png" class="img-responsive"></div>
       </div>
     </div>  
 </section>
