--- a/layouts/index.html
+++ b/layouts/index.html
@@ -71,8 +71,8 @@
   <div class="container">
     <div class="row mb-5">
       <div class="col-10">
-        <h2 class="mb-2 ">DAOSquare Community DAO</h2>
-        <p class="mb-5">DAOSquare Community DAO (DCD) is a governance organization of DAOSquare<br>You can check the detailed introduction in our BLOG.
+        <h2 class="mb-2 ">DAOSquare ecosystem & family</h2>
+        <p class="mb-5">There are some projects that we are incubating (ecosystem), and those families who have been helping us.
         </p>
         <div class="btn-group btn-group-toggle " data-toggle="buttons">
           <label class="btn active ">
@@ -99,7 +99,7 @@
             <img src="{{ .Params.Image | absURL }}" alt="portfolio-image" class="img-fluid w-100 d-block">
             <div class="overlay-box">
               <div class="overlay-inner">
-                <a class="overlay-content" href="{{ .Permalink }}">
+                <a class="overlay-content" href="{{ .Params.project_url }}">
                   <h5 class="mb-0">{{ .Title }}</h5>
                   <p>{{ .Params.Category | humanize }}</p>
                 </a>
