--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
-
+<!-- music -->
+<audio src="/Hope (MusicByTypto).mp3" autoplay></audio>
 <!-- Banner Start -->
 {{ if .Site.Data.homepage.banner.enable }}
 {{ with .Site.Data.homepage.banner }}
