update new version

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -113,13 +113,13 @@
     </div>
   </div>
 </section>
-{{ end }}
-{{ end }}
-<!-- Portfolio End -->
-<section class="quote">
+<section class="section quote">
   <div class="container">
       <div class="col-10">
         <h2 class="text-center ">"If you want to go fast, go alone. If you want to go far, go together"</h2>
       </div>
   </div>
 </section>
+{{ end }}
+<!-- Portfolio End -->
+{{ end }}
