--- a/layouts/index.html
+++ b/layouts/index.html
@@ -61,7 +61,7 @@
         <p class="mb-5">DAOSquare Community DAO (DCD) is a governance organization of DAOSquare<br>You can check the detailed introduction in our BLOG.
         </p>
         <a class="btn btn-danger" href="https://pokemol.com/dao/0x1ba850cb53280d7f9987be283ff462038ec8abe2/members">MEET OUR DAO MEMBERS</a>
-        <div><img src="/images/pokemol__brand-svg.png" class="img-responsive"></div>
+        <div><img src="/images/pokemol__brand.svg" class="img-responsive"></div>
       </div>
     </div>  
 </section>
