--- a/layouts/index.html
+++ b/layouts/index.html
@@ -115,8 +115,9 @@
 </section>
 <section class="section quote">
   <div class="container">
-      <div class="col-10">
-        <h2 class="text-center ">"If you want to go fast, go alone. If you want to go far, go together"</h2>
+      <div>
+        <h2 class="text-center ">"If you want to go fast, go alone. </h2>
+        <h2 class="text-center ">you want to go far, go together"</h2>
       </div>
   </div>
 </section>
