--- a/layouts/index.html
+++ b/layouts/index.html
@@ -58,12 +58,97 @@
     <div class="row">
       <div class="col-lg-8">
         <h2 class="mb-2 ">DAOSquare Community DAO</h2>
-        <p class="mb-5">DAOSquare Community DAO (DCD) is a governance organization of DAOSquare<br>You can check the detailed introduction in our BLOG.
+        <p class="mb-5">DAOSquare Community DAO (DCD) is a governance organization of DAOSquare<br>You can check the
+          detailed introduction in our BLOG.
         </p>
-        <a class="btn btn-danger" href="https://pokemol.com/dao/0x1ba850cb53280d7f9987be283ff462038ec8abe2/members">MEET OUR DAO MEMBERS</a>
+      </div>
+      <div class="row ">
+        <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
+          <article>
+            <img class="card-img-top rounded-0"
+              src="https://images-cdn.shimo.im/d92MJ3Jis6Tm4tDr.jpg__thumbnail"
+              alt="Tima">
+            <div class="card-body">
+              <h4 class="card-title">Tima<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
+              </h4>
+              <p class="card-text">Tima is the incarnation of deity, a fusion of history and the future.</p>
+              <p class="card-text">He/she can tell you any historical experience, knowledge, and everything about the future. He/she is the spiritual leader of DAOSquare.</p>
+            </div>
+          </article>
+        </article>
+        <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
+          <article>
+            <img class="card-img-top rounded-0"
+              src="https://images-cdn.shimo.im/OFakQMPE7pGecm9Q.jpg__thumbnail"
+              alt="Dragon Knight">
+            <div class="card-body">
+              <h4 class="card-title">Dragon Knight<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
+              </h4>
+              <p class="card-text">Dragon Knight is the warriors of DAO. They work in their respective territories and fight for DAO through their efforts.</p>
+              <p class="card-text">Of course, they often join DAO's round tables to discuss DAO's future with other roles.</p>
+            </div>
+          </article>
+        </article>
+        <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
+          <article>
+            <img class="card-img-top rounded-0"
+              src="https://images-cdn.shimo.im/giy6zmKyHvZdDzcx.jpg__thumbnail"
+              alt="Elegant Light Box Paper Cut Dioramas">
+            <div class="card-body">
+              <h4 class="card-title">Ninja<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
+              </h4>
+              <p class="card-text">Ninja rarely shows up, you can't feel him/her, but he/she is likely to be behind you...</p>
+              <p class="card-text">Once ninja shows up, there is bound to be something important or tricky. Only he/she can handle it. Of course, he/she can handle everything.</p>
+            </div>
+          </article>
+        </article>
+        <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
+          <article>
+            <img class="card-img-top rounded-0"
+              src="https://images-cdn.shimo.im/GgZqxD9UcTuFardy.jpg__thumbnail"
+              alt="Elegant Light Box Paper Cut Dioramas">
+            <div class="card-body">
+              <h4 class="card-title">Walker<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
+              </h4>
+              <p class="card-text">Walker allways "walking". They link each role of the DAO and weave them into a strong and powerful net.</p>
+              <p class="card-text">And, even the most secretive ninjas, walkers can find them at any time.</p>
+            </div>
+          </article>
+        </article>
+        <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
+          <article>
+            <img class="card-img-top rounded-0"
+              src="https://images-cdn.shimo.im/NtFqAzt8M6GrBgmv.jpg__thumbnail"
+              alt="Elegant Light Box Paper Cut Dioramas">
+            <div class="card-body">
+              <h4 class="card-title">Guardian<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
+              </h4>
+              <p class="card-text">At every step forward, the guardian is never absent. Guardian provides solid support for DAO by financial capital and social capital.</p>
+              <p class="card-text">On the other hand, DAO also bring rich harvest to the guardians.</p>
+            </div>
+          </article>
+        </article>
+        <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
+          <article>
+            <img class="card-img-top rounded-0"
+              src="https://images-cdn.shimo.im/rLeEzbT0vHUvvoKK.jpg__thumbnail"
+              alt="Elegant Light Box Paper Cut Dioramas">
+            <div class="card-body">
+              <h4 class="card-title">Summoner<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
+              </h4>
+              <p class="card-text">Summoner is the wisher of DAO. He planted a seed and helped it thrive. This seed is DAO.</p>
+              <p class="card-text">Summoner builds DAO's original vision, mission, and values, and summons like-minded people. Summoner will never compromise until he dies.</p>
+            </div>
+          </article>
+        </article>
+      </div>
+      <div class="col-lg-8">
+        <a class="btn btn-danger" href="https://pokemol.com/dao/0x1ba850cb53280d7f9987be283ff462038ec8abe2/members">MEET
+          OUR DAO MEMBERS</a>
         <div><img src="/images/pokemol__brand.svg" class="img-responsive"></div>
       </div>
-    </div>  
+    </div>
+  </div>
 </section>
 <!-- Introduct end -->
 <!-- Portfolio start -->
@@ -73,7 +158,8 @@
     <div class="row mb-5">
       <div class="col-10">
         <h2 class="mb-2 ">DAOSquare ecosystem & family</h2>
-        <p class="mb-5">There are some projects that we are incubating (ecosystem), and those families who have been helping us.
+        <p class="mb-5">There are some projects that we are incubating (ecosystem), and those families who have been
+          helping us.
         </p>
         <div class="btn-group btn-group-toggle " data-toggle="buttons">
           <label class="btn active ">
@@ -115,10 +201,10 @@
 </section>
 <section class="section quote">
   <div class="container">
-      <div>
-        <h2 class="text-center ">"If you want to go fast, go alone. </h2>
-        <h2 class="text-center ">you want to go far, go together"</h2>
-      </div>
+    <div>
+      <h2 class="text-center ">"If you want to go fast, go alone. </h2>
+      <h2 class="text-center ">you want to go far, go together"</h2>
+    </div>
   </div>
 </section>
 {{ end }}
