--- a/layouts/index.html
+++ b/layouts/index.html
@@ -62,7 +62,7 @@
           detailed introduction in our BLOG.
         </p>
       </div>
-      <div class="row ">
+      <div class="row " style="margin-bottom: 50px;">
         <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <article>
             <img class="card-img-top rounded-0"
@@ -102,6 +102,8 @@
             </div>
           </article>
         </article>
+      </div>
+      <div class="row " style="margin-bottom: 50px;">
         <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <article>
             <img class="card-img-top rounded-0"
