--- a/layouts/index.html
+++ b/layouts/index.html
@@ -66,7 +66,7 @@
         <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <article>
             <img class="card-img-top rounded-0"
-              src="https://images-cdn.shimo.im/d92MJ3Jis6Tm4tDr.jpg__thumbnail"
+              src="/images/Tima.jpg"
               alt="Tima">
             <div class="card-body">
               <h4 class="card-title">Tima<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
@@ -79,7 +79,7 @@
         <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <article>
             <img class="card-img-top rounded-0"
-              src="https://images-cdn.shimo.im/OFakQMPE7pGecm9Q.jpg__thumbnail"
+              src="/images/Knight.jpg"
               alt="Dragon Knight">
             <div class="card-body">
               <h4 class="card-title">Dragon Knight<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
@@ -92,7 +92,7 @@
         <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <article>
             <img class="card-img-top rounded-0"
-              src="https://images-cdn.shimo.im/giy6zmKyHvZdDzcx.jpg__thumbnail"
+              src="/images/Ninja.jpg"
               alt="Elegant Light Box Paper Cut Dioramas">
             <div class="card-body">
               <h4 class="card-title">Ninja<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
@@ -107,7 +107,7 @@
         <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <article>
             <img class="card-img-top rounded-0"
-              src="https://images-cdn.shimo.im/GgZqxD9UcTuFardy.jpg__thumbnail"
+              src="/images/Walker.jpg"
               alt="Elegant Light Box Paper Cut Dioramas">
             <div class="card-body">
               <h4 class="card-title">Walker<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
@@ -120,7 +120,7 @@
         <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <article>
             <img class="card-img-top rounded-0"
-              src="https://images-cdn.shimo.im/NtFqAzt8M6GrBgmv.jpg__thumbnail"
+              src="/images/Guardian.jpg"
               alt="Elegant Light Box Paper Cut Dioramas">
             <div class="card-body">
               <h4 class="card-title">Guardian<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
@@ -133,7 +133,7 @@
         <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <article>
             <img class="card-img-top rounded-0"
-              src="https://images-cdn.shimo.im/rLeEzbT0vHUvvoKK.jpg__thumbnail"
+              src="/images/Summoner.jpg"
               alt="Elegant Light Box Paper Cut Dioramas">
             <div class="card-body">
               <h4 class="card-title">Summoner<a href="https://themes.gohugo.io//theme/educenter-hugo/blog/blog-post-1/"></a>
@@ -144,10 +144,10 @@
           </article>
         </article>
       </div>
-      <div class="col-lg-8">
+      <div class="col-lg-8" >
         <a class="btn btn-danger" href="https://pokemol.com/dao/0x1ba850cb53280d7f9987be283ff462038ec8abe2/members">MEET
           OUR DAO MEMBERS</a>
-        <div><img src="/images/pokemol__brand.svg" class="img-responsive"></div>
+        <div style="margin-top: 20px;"><img src="/images/pokemol__brand.svg" class="img-responsive"></div>
       </div>
     </div>
   </div>
