--- a/layouts/index.html
+++ b/layouts/index.html
@@ -58,8 +58,7 @@
     <div class="row">
       <div class="col-lg-8">
         <h2 class="mb-2 ">DAOSquare Community DAO</h2>
-        <p class="mb-5">DAOSquare Community DAO (DCD) is a governance organization of DAOSquare<br>You can check the
-          detailed introduction in our BLOG.
+        <p class="mb-5">DAOSquare Community DAO (DCD) is the core driver for the development of DAOSquare, but it is decentralized and open, everyone has the right to join and become the head. You can check the detailed introduction in our BLOG. There are six roles in DCD:
         </p>
       </div>
       <div class="row " style="margin-bottom: 50px;">
@@ -188,9 +187,10 @@
             <img src="{{ .Params.Image | absURL }}" alt="portfolio-image" class="img-fluid w-100 d-block">
             <div class="overlay-box">
               <div class="overlay-inner">
-                <a class="overlay-content" href="{{ .Params.project_url }}">
+                <a class="overlay-content" href="{{ .Params.project_url }}" target="_Blank">
                   <h5 class="mb-0">{{ .Title }}</h5>
                   <p>{{ .Params.Category | humanize }}</p>
+                  <p>{{.Params.Description | humanize}}</p>
                 </a>
               </div>
             </div>
