--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <!-- music -->
-<embed src="/Hope (MusicByTypto).mp3" loop="true" autostart="true" width="0" height="0">
+<!-- <embed src="/Hope (MusicByTypto).mp3" loop="true" autostart="true" width="0" height="0"> -->
 <!-- Banner Start -->
 {{ if .Site.Data.homepage.banner.enable }}
 {{ with .Site.Data.homepage.banner }}
@@ -205,7 +205,7 @@
   <div class="container">
     <div>
       <h2 class="text-center ">"If you want to go fast, go alone. </h2>
-      <h2 class="text-center ">you want to go far, go together"</h2>
+      <h2 class="text-center ">If you want to go far, go together"</h2>
     </div>
   </div>
 </section>
